# roboguard-ros2

./: .gitignore  LICENSE  README.md  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
config/: default_params.yaml  healing_strategies.yaml
dashboard/: README.md  package.json  tailwind.config.js
dashboard/public/: index.html
dashboard/src/: App.jsx  index.css
dashboard/src/components/: AlertFeed.jsx  HealingLog.jsx  NodeCard.jsx
dashboard/src/hooks/: useGuardianWS.js
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
guardian/: package.xml  setup.py
guardian/guardian/healing/: healing_actions.py  recovery_strategies.py
guardian/guardian/ml/: anomaly_detector.py  failure_predictor.py  feature_extractor.py
guardian/guardian/nodes/: anomaly_detector_node.py  dashboard_bridge_node.py  failure_injector_node.py  failure_predictor_node.py  health_monitor_node.py  mock_robot_node.py  self_healer_node.py
guardian/guardian/utils/: logger.py  metrics.py
guardian/test/: test_anomaly_detector.py  test_feature_extractor.py  test_healing_actions.py
guardian_msgs/: CMakeLists.txt  package.xml
guardian_msgs/action/: ExecuteRecovery.action
guardian_msgs/msg/: HealingAction.msg  MetricSample.msg  NodeHealth.msg  SystemAlert.msg
guardian_msgs/srv/: GetHealthReport.srv  TriggerHealing.srv
launch/: guardian.launch.py  guardian_sim.launch.py
scripts/: generate_test_data.py  train_models.py
