<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guardian</name>
  <version>1.0.0</version>
  <description>
    AI-powered predictive failure detection and self-healing platform for ROS2 robots.
    Monitors node health, detects anomalies with ML, predicts failures, and autonomously
    executes recovery strategies.
  </description>

  <maintainer email="guardian@your-org.com">ROS2 Guardian Team</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://github.com/your-org/ros2-guardian</url>
  <url type="bugtracker">https://github.com/your-org/ros2-guardian/issues</url>
  <url type="repository">https://github.com/your-org/ros2-guardian</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>lifecycle_msgs</depend>
  <depend>guardian_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-pandas</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>ament_pep8</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
